--- a/examples/9950x_pytorch_cifar10_classification.ipynb
+++ b/examples/9950x_pytorch_cifar10_classification.ipynb
@@ -27,10 +27,33 @@
     "  testing/learning\n",
     "    - airplane, automobile, bird, cat, deer, dog, frog, horse, ship, truck\n",
     "\n",
+    "- Specs\n",
+    "  - Ryzen 9 9950X\n",
+    "  - ASRock B850i ITX\n",
+    "  - NZXT 120mm AIO - Polartherm X10\n",
+    "  - 140mm be quiet 1900rpm fan blowing on motherboard/vrm/cpu/nvme\n",
+    "\n",
+    "\n",
+    "- 9950X Factory Stock\n",
+    "  - Elapsed time: \n",
+    "  - Cinebench R23 Score: \n",
+    "    - Peak CPU Package Power:\n",
+    "  - CPU Mark Score:  | Single-thread Score: \n",
+    "- 9950X CO -30\n",
+    "  - Elapsed time: \n",
+    "  - Cinebench R23 Score: \n",
+    "    - Peak CPU Package Power:\n",
+    "  - CPU Mark Score:  | Single-thread Score: \n",
     "- 9950X 105w eco mode CO -30 all core\n",
-    "  - 200.25 seconds\n",
+    "  - Elapsed time: 200.25 seconds\n",
+    "  - Cinebench R23 Score: 39495\n",
+    "    - Peak CPU Package Power:\n",
+    "  - CPU Mark Score:  | Single-thread Score: \n",
     "- 9950X 105w eco mode CO -35 all core\n",
-    "  - "
+    "  - Elapsed time: 199.46 seconds\n",
+    "  - Cinebench R23 Score: 39191\n",
+    "    - Peak CPU Package Power: 133.653w\n",
+    "  - CPU Mark Score: 67118 | Single-thread Score: 4859"
    ]
   },
   {
