--- a/examples/9950x_pytorch_cifar10_classification.ipynb
+++ b/examples/9950x_pytorch_cifar10_classification.ipynb
@@ -25,21 +25,27 @@
     "  - We will need torchvision and use torchvision.datasets to load CIRFAR-10\n",
     "  - CIFAR-10 is a 10 class image dataset, pretty small in size and good for lab/\n",
     "  testing/learning\n",
-    "    - airplane, automobile, bird, cat, deer, dog, frog, horse, ship, truck\n",
-    "\n",
+    "    - airplane, automobile, bird, cat, deer, dog, frog, horse, ship, truck"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- Specs\n",
     "  - Ryzen 9 9950X\n",
     "  - ASRock B850i ITX\n",
     "  - NZXT 120mm AIO - Polartherm X10\n",
     "  - 140mm be quiet 1900rpm fan blowing on motherboard/vrm/cpu/nvme\n",
     "\n",
+    "I have a new AIO coming and possibly I might grab a noctua NH-P1 to passive cool this and see where performance is with total package power under 100w. The below testing will all be invalidated as this NZXT cooler is just temporary. It would appear that most of the power is just used to chase the high advertised clock rates, most of the performance is at 100-130w. \n",
     "\n",
     "- 9950X Factory Stock\n",
     "  - Elapsed time: \n",
-    "  - Cinebench R23 Score: \n",
-    "    - Peak CPU Package Power:\n",
-    "  - CPU Mark Score:  | Single-thread Score: \n",
-    "- 9950X CO -30\n",
+    "  - Cinebench R23 Score: 41434\n",
+    "    - Peak CPU Package Power: 199.682w\n",
+    "  - CPU Mark Score: 67179 | Single-thread Score: 4775\n",
+    "- 9950X 75c Thermal Limit CO -30\n",
     "  - Elapsed time: \n",
     "  - Cinebench R23 Score: \n",
     "    - Peak CPU Package Power:\n",
@@ -53,7 +59,12 @@
     "  - Elapsed time: 199.46 seconds\n",
     "  - Cinebench R23 Score: 39191\n",
     "    - Peak CPU Package Power: 133.653w\n",
-    "  - CPU Mark Score: 67118 | Single-thread Score: 4859"
+    "  - CPU Mark Score: 67118 | Single-thread Score: 4859\n",
+    "- 9950X 75w eco mode CO -30 all core\n",
+    "  - Elapsed time: \n",
+    "  - Cinebench R23 Score: \n",
+    "    - Peak CPU Package Power: \n",
+    "  - CPU Mark Score:  | Single-thread Score: "
    ]
   },
   {
