--- a/examples/9950x_pytorch_cifar10_classification.ipynb
+++ b/examples/9950x_pytorch_cifar10_classification.ipynb
@@ -40,6 +40,8 @@
     "\n",
     "I have a new AIO coming and possibly I might grab a noctua NH-P1 to passive cool this and see where performance is with total package power under 100w. The below testing will all be invalidated as this NZXT cooler is just temporary. It would appear that most of the power is just used to chase the high advertised clock rates, most of the performance is at 100-130w. \n",
     "\n",
+    "I will come up with a set number of tests to run and include the CIFAR10 classification testing. The notes below are just checking for deltas.\n",
+    "\n",
     "- 9950X Factory Stock\n",
     "  - Elapsed time: \n",
     "  - Cinebench R23 Score: 41434\n",
@@ -62,9 +64,9 @@
     "  - CPU Mark Score: 67118 | Single-thread Score: 4859\n",
     "- 9950X 75w eco mode CO -30 all core\n",
     "  - Elapsed time: \n",
-    "  - Cinebench R23 Score: \n",
-    "    - Peak CPU Package Power: \n",
-    "  - CPU Mark Score:  | Single-thread Score: "
+    "  - Cinebench R23 Score: 31591\n",
+    "    - Peak CPU Package Power: 87.856w\n",
+    "  - CPU Mark Score: 57904 | Single-thread Score: 4868"
    ]
   },
   {
@@ -277,18 +279,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.9"
   }
  },
  "nbformat": 4,
