--- a/examples/9950x_pytorch_cifar10_classification.ipynb
+++ b/examples/9950x_pytorch_cifar10_classification.ipynb
@@ -32,41 +32,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Adding some benchmark data across various power levels and undervolts\n",
+    "\n",
     "- Specs\n",
     "  - Ryzen 9 9950X\n",
     "  - ASRock B850i ITX\n",
-    "  - NZXT 120mm AIO - Polartherm X10\n",
+    "  - be quiet! Dark Rock Elite - Thermalright Heilos\n",
     "  - 140mm be quiet 1900rpm fan blowing on motherboard/vrm/cpu/nvme\n",
-    "\n",
-    "I have a new AIO coming and possibly I might grab a noctua NH-P1 to passive cool this and see where performance is with total package power under 100w. The below testing will all be invalidated as this NZXT cooler is just temporary. It would appear that most of the power is just used to chase the high advertised clock rates, most of the performance is at 100-130w. \n",
+    "  - Mixed precision is enabled\n",
     "\n",
     "I will come up with a set number of tests to run and include the CIFAR10 classification testing. The notes below are just checking for deltas.\n",
     "\n",
     "- 9950X Factory Stock\n",
     "  - Elapsed time: \n",
-    "  - Cinebench R23 Score: 41434\n",
-    "    - Peak CPU Package Power: 199.682w\n",
-    "  - CPU Mark Score: 67179 | Single-thread Score: 4775\n",
+    "  - Cinebench R23 Score: \n",
+    "    - Peak CPU Package Power: \n",
+    "  - CPU Mark Score:\n",
+    "  - CPU Mark Single-thread Score: \n",
+    "- 9950X 65c Thermal Limit CO -30\n",
+    "  - Elapsed time: \n",
+    "  - Cinebench R23 Score: \n",
+    "    - Peak CPU Package Power:\n",
+    "  - CPU Mark Score:\n",
+    "  - CPU Mark Single-thread Score: \n",
     "- 9950X 75c Thermal Limit CO -30\n",
     "  - Elapsed time: \n",
     "  - Cinebench R23 Score: \n",
     "    - Peak CPU Package Power:\n",
-    "  - CPU Mark Score:  | Single-thread Score: \n",
-    "- 9950X 105w eco mode CO -30 all core\n",
-    "  - Elapsed time: 200.25 seconds\n",
-    "  - Cinebench R23 Score: 39495\n",
-    "    - Peak CPU Package Power:\n",
-    "  - CPU Mark Score:  | Single-thread Score: \n",
-    "- 9950X 105w eco mode CO -35 all core\n",
-    "  - Elapsed time: 199.46 seconds\n",
-    "  - Cinebench R23 Score: 39191\n",
-    "    - Peak CPU Package Power: 133.653w\n",
-    "  - CPU Mark Score: 67118 | Single-thread Score: 4859\n",
-    "- 9950X 75w eco mode CO -30 all core\n",
+    "  - CPU Mark Score:\n",
+    "  - CPU Mark Single-thread Score: \n",
+    "- 9950X 85c Thermal Limit CO -30\n",
     "  - Elapsed time: \n",
-    "  - Cinebench R23 Score: 31591\n",
-    "    - Peak CPU Package Power: 87.856w\n",
-    "  - CPU Mark Score: 57904 | Single-thread Score: 4868"
+    "  - Cinebench R23 Score: \n",
+    "    - Peak CPU Package Power:\n",
+    "  - CPU Mark Score:\n",
+    "  - CPU Mark Single-thread Score: \n",
+    "- 9950X 65w Eco Mode CO -30\n",
+    "  - Elapsed time: \n",
+    "  - Cinebench R23 Score: \n",
+    "    - Peak CPU Package Power:\n",
+    "  - CPU Mark Score:\n",
+    "  - CPU Mark Single-thread Score: \n",
+    "- 9950X 105w Eco Mode CO -30\n",
+    "  - Elapsed time: \n",
+    "  - Cinebench R23 Score: \n",
+    "    - Peak CPU Package Power:\n",
+    "  - CPU Mark Score:\n",
+    "  - CPU Mark Single-thread Score: "
    ]
   },
   {
