updated base testing

--- a/examples/9950x_benchmarking.ipynb
+++ b/examples/9950x_benchmarking.ipynb
@@ -4,7 +4,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train And Test - CIRFAR-10 Image Classification AMD 9950X"
+    "# 9950X Benchmarking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Specs\n",
+    "  - Ryzen 9 9950X\n",
+    "  - ASRock B850i ITX\n",
+    "  - Corsair DDR5 6000Mhz CL30 EXPO 96GB (48GB x 2)\n",
+    "  - be quiet! Silent Loop 3 240mm AIO - Thermal Grizzly Kryosheet\n",
+    "  - 140mm be quiet 1900rpm fan blowing 50% PWM on motherboard/vrm/cpu/nvme\n",
+    "  - Mixed precision is enabled where applicable\n",
+    "\n",
+    "\n",
+    "- 9950X Factory Stock\n",
+    "  - Cinebench R23 Score: 41733\n",
+    "    - CPU (Tctl/Tdie) Max Temp: 68.2c\n",
+    "  - CPU Mark Score: 67595\n",
+    "  - CPU Mark Single-thread Score: 4819\n",
+    "- 9950X Factory Stock CO -30\n",
+    "  - Cinebench R23 Score: 44563\n",
+    "    - CPU (Tctl/Tdie) Max Temp: 68.8c\n",
+    "  - CPU Mark Score: 70126\n",
+    "  - CPU Mark Single-thread Score: 4837\n",
+    "- 9950X 65c Thermal Limit CO -30\n",
+    "  - Cinebench R23 Score: 44314\n",
+    "    - Max Recorded Wattage: 195w\n",
+    "  - CPU Mark Score: 69508\n",
+    "  - CPU Mark Single-thread Score: 4862\n",
+    "- 9950X 75c Thermal Limit CO -30\n",
+    "  - Cinebench R23 Score: 45821 \n",
+    "    - Max Recorded Wattage: 222w\n",
+    "  - CPU Mark Score: 70302\n",
+    "  - CPU Mark Single-thread Score: 4865\n",
+    "- 9950X 85c Thermal Limit CO -30\n",
+    "  - Cinebench R23 Score: 45695\n",
+    "    - Max Recorded Wattage: 222w\n",
+    "  - CPU Mark Score: 70616\n",
+    "  - CPU Mark Single-thread Score: 4843\n",
+    "- 9950X 65w Eco Mode CO -30\n",
+    "  - Cinebench R23 Score: 31204\n",
+    "    - CPU (Tctl/Tdie) Max Temp: 45.00c\n",
+    "  - CPU Mark Score: 58177\n",
+    "  - CPU Mark Single-thread Score: 4873\n",
+    "- 9950X 105w Eco Mode CO -30\n",
+    "  - Cinebench R23 Score: 39207\n",
+    "    - CPU (Tctl/Tdie) Max Temp: 51.0c\n",
+    "  - CPU Mark Score: 66329\n",
+    "  - CPU Mark Single-thread Score: 4844\n",
+    "\n",
+    "We are clearly limited by power here. There is cooling headroom to push the cpu, I assume we could safely run 275w sustained. However, there will be minimal gains as the wattage goes up. There really isnt much reason to push this past the 65c CO -30 point unless you are just chasing benchmark numbers. I would also be fine running 51c all core all day on the 105w eco mode.\n",
+    "\n",
+    "All future testing on cpu will be done at the 65c thermal limit with a curve optimizer negative 30 offset. No other tuning is required. This is highly performant and very simple.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ignore the mess below, just roughing in some things"
    ]
   },
   {
@@ -26,59 +87,6 @@
     "  - CIFAR-10 is a 10 class image dataset, pretty small in size and good for lab/\n",
     "  testing/learning\n",
     "    - airplane, automobile, bird, cat, deer, dog, frog, horse, ship, truck"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Adding some benchmark data across various power levels and undervolts\n",
-    "\n",
-    "- Specs\n",
-    "  - Ryzen 9 9950X\n",
-    "  - ASRock B850i ITX\n",
-    "  - be quiet! Dark Rock Elite - Thermalright Heilos\n",
-    "  - 140mm be quiet 1900rpm fan blowing on motherboard/vrm/cpu/nvme\n",
-    "  - Mixed precision is enabled\n",
-    "\n",
-    "I will come up with a set number of tests to run and include the CIFAR10 classification testing. The notes below are just checking for deltas.\n",
-    "\n",
-    "- 9950X Factory Stock\n",
-    "  - Elapsed time: \n",
-    "  - Cinebench R23 Score: \n",
-    "    - Peak CPU Package Power: \n",
-    "  - CPU Mark Score:\n",
-    "  - CPU Mark Single-thread Score: \n",
-    "- 9950X 65c Thermal Limit CO -30\n",
-    "  - Elapsed time: \n",
-    "  - Cinebench R23 Score: \n",
-    "    - Peak CPU Package Power:\n",
-    "  - CPU Mark Score:\n",
-    "  - CPU Mark Single-thread Score: \n",
-    "- 9950X 75c Thermal Limit CO -30\n",
-    "  - Elapsed time: \n",
-    "  - Cinebench R23 Score: \n",
-    "    - Peak CPU Package Power:\n",
-    "  - CPU Mark Score:\n",
-    "  - CPU Mark Single-thread Score: \n",
-    "- 9950X 85c Thermal Limit CO -30\n",
-    "  - Elapsed time: \n",
-    "  - Cinebench R23 Score: \n",
-    "    - Peak CPU Package Power:\n",
-    "  - CPU Mark Score:\n",
-    "  - CPU Mark Single-thread Score: \n",
-    "- 9950X 65w Eco Mode CO -30\n",
-    "  - Elapsed time: \n",
-    "  - Cinebench R23 Score: \n",
-    "    - Peak CPU Package Power:\n",
-    "  - CPU Mark Score:\n",
-    "  - CPU Mark Single-thread Score: \n",
-    "- 9950X 105w Eco Mode CO -30\n",
-    "  - Elapsed time: \n",
-    "  - Cinebench R23 Score: \n",
-    "    - Peak CPU Package Power:\n",
-    "  - CPU Mark Score:\n",
-    "  - CPU Mark Single-thread Score: "
    ]
   },
   {
@@ -283,14 +291,103 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import time\n",
+    "import os\n",
+    "import psutil\n",
+    "\n",
+    "# Function to set AVX512 environment variable\n",
+    "def set_avx512(enabled=True):\n",
+    "    if enabled:\n",
+    "        os.environ[\"OPENBLAS_NUM_THREADS\"] = \"1\"  # Control threads for consistency\n",
+    "        os.environ[\"MKL_ENABLE_INSTRUCTIONS\"] = \"AVX512\"\n",
+    "    else:\n",
+    "        os.environ[\"OPENBLAS_NUM_THREADS\"] = \"1\"\n",
+    "        os.environ[\"MKL_ENABLE_INSTRUCTIONS\"] = \"AVX\"  # Falls back to AVX2\n",
+    "\n",
+    "# Benchmark function\n",
+    "def run_benchmark(matrix_size=2000, iterations=50):\n",
+    "    # Generate random matrices\n",
+    "    A = np.random.rand(matrix_size, matrix_size).astype(np.float32)\n",
+    "    B = np.random.rand(matrix_size, matrix_size).astype(np.float32)\n",
+    "    \n",
+    "    # Warm-up run\n",
+    "    _ = np.dot(A, B)\n",
+    "    \n",
+    "    # Time the iterations\n",
+    "    start_time = time.perf_counter()\n",
+    "    for _ in range(iterations):\n",
+    "        C = np.dot(A, B)\n",
+    "    end_time = time.perf_counter()\n",
+    "    \n",
+    "    elapsed_time = end_time - start_time\n",
+    "    gflops = (2 * matrix_size**3 * iterations) / (elapsed_time * 1e9)  # GFLOPS calculation\n",
+    "    return elapsed_time, gflops\n",
+    "\n",
+    "def main():\n",
+    "    # Benchmark parameters\n",
+    "    matrix_size = 2000  # Adjust based on your needs\n",
+    "    iterations = 50     # Number of iterations per test\n",
+    "    runs = 5           # Number of runs to average\n",
+    "    \n",
+    "    print(f\"CPU: {psutil.cpu_freq().current/1000:.2f} GHz, {psutil.cpu_count()} cores\")\n",
+    "    print(f\"Matrix size: {matrix_size}x{matrix_size}, Iterations: {iterations}, Runs: {runs}\\n\")\n",
+    "    \n",
+    "    # Test with AVX512 enabled\n",
+    "    print(\"Testing with AVX512 enabled...\")\n",
+    "    set_avx512(True)\n",
+    "    avx512_times = []\n",
+    "    avx512_gflops = []\n",
+    "    for _ in range(runs):\n",
+    "        elapsed, gflops = run_benchmark(matrix_size, iterations)\n",
+    "        avx512_times.append(elapsed)\n",
+    "        avx512_gflops.append(gflops)\n",
+    "    \n",
+    "    # Test with AVX512 disabled\n",
+    "    print(\"Testing with AVX512 disabled...\")\n",
+    "    set_avx512(False)\n",
+    "    no_avx512_times = []\n",
+    "    no_avx512_gflops = []\n",
+    "    for _ in range(runs):\n",
+    "        elapsed, gflops = run_benchmark(matrix_size, iterations)\n",
+    "        no_avx512_times.append(elapsed)\n",
+    "        no_avx512_gflops.append(gflops)\n",
+    "    \n",
+    "    # Results\n",
+    "    print(\"\\nResults:\")\n",
+    "    print(f\"AVX512 Enabled:\")\n",
+    "    print(f\"  Avg Time: {np.mean(avx512_times):.3f}s (±{np.std(avx512_times):.3f})\")\n",
+    "    print(f\"  Avg GFLOPS: {np.mean(avx512_gflops):.2f} (±{np.std(avx512_gflops):.2f})\")\n",
+    "    print(f\"AVX512 Disabled:\")\n",
+    "    print(f\"  Avg Time: {np.mean(no_avx512_times):.3f}s (±{np.std(no_avx512_times):.3f})\")\n",
+    "    print(f\"  Avg GFLOPS: {np.mean(no_avx512_gflops):.2f} (±{np.std(no_avx512_gflops):.2f})\")\n",
+    "    \n",
+    "    speedup = np.mean(no_avx512_times) / np.mean(avx512_times)\n",
+    "    print(f\"\\nSpeedup with AVX512: {speedup:.2f}x\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "cpu",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
