--- a/examples/9950x_benchmarking.ipynb
+++ b/examples/9950x_benchmarking.ipynb
@@ -58,7 +58,43 @@
     "\n",
     "We are clearly limited by power here. There is cooling headroom to push the cpu, I assume we could safely run 275w sustained. However, there will be minimal gains as the wattage goes up. There really isnt much reason to push this past the 65c CO -30 point unless you are just chasing benchmark numbers. I would also be fine running 51c all core all day on the 105w eco mode.\n",
     "\n",
-    "All future testing on cpu will be done at the 65c thermal limit with a curve optimizer negative 30 offset. No other tuning is required. This is highly performant and very simple.\n"
+    "All future testing on cpu will be done at the 65c thermal limit with a curve optimizer negative 30 offset. No other tuning is required. This is highly performant and very simple.\n",
+    "\n",
+    "- LM Studio Windows 11 Performance\n",
+    "  - CPU runtime only\n",
+    "  - Default Context Size\n",
+    "  - Seed: 65535\n",
+    "  - CPU Thread Pool Size: 12\n",
+    "  - Flash Attention Off\n",
+    "  - Test Prompt\n",
+    "    - \"Tell me a real story about someone who never existed tasting the color red while walking through light while in a vacuum of low pressure clouds. This person is always there and knows what you will output so you must craft the story without there knowledge. In the story all things that are possible are impossible and must come before they were created. Describe time as a feeling that only dreams can see awake. Please write the story in under 500 words.\"\n",
+    "  - 9950X\n",
+    "    - Llama 3.2 3B Instruct Q4\n",
+    "      - 17.97 tok/sec 490 tokens 0.77s to first token\n",
+    "    - Llama 3.3 70B Instruct Q4\n",
+    "      - 1.47 tok/sec 394 tokens 16.06s to first token\n",
+    "    - Gemma 2 2B Instruct Q4\n",
+    "      - 30.15 tok/sec 482 tokens 0.60s to first token\n",
+    "    - Gemma 2 9B Instruct Q4\n",
+    "      - 9.43 tok/sec 421 tokens 1.47s to first token\n",
+    "    - Gemma 3 1B Instruct Q4\n",
+    "      - 63.81 tok/sec 533 tokens 0.18s to first token\n",
+    "    - Gemma 3 4B Instruct Q4\n",
+    "      - 22.80 tok/sec 521 tokens 0.95s to first token\n",
+    "    - Gemma 3 12B Instruct Q4\n",
+    "      - 8.28 tok/sec 462 tokens 2.86s to first token\n",
+    "    - Phi4 15B Q4\n",
+    "      - 6.78 tok/sec 543 tokens 3.00s to first token\n",
+    "    - Qwen 2.5 Coder 3B Instruct Q4\n",
+    "      - 29.66 tok/sec 426 tokens 0.61s to first token\n",
+    "    - Qwen 2.5 Coder 7B Instruct Q4\n",
+    "      - 14.18 tok/sec 559 tokens 1.31s to first token\n",
+    "    - DeepSeek R1 Distill Llama 8B Q4\n",
+    "      - 12.68 tok/sec 1105 tokens 1.08s to first token\n",
+    "    - DeepSeek R1 Distill Qwen 14B Q4\n",
+    "      - 7.44 tok/sec 904 tokens 2.00s to first token\n",
+    "    - DeepSeek R1 Distill Qwen 32B Q4\n",
+    "      - 3.36 tok/sec 1038 tokens 4.74s to first token\n"
    ]
   },
   {
