updated page name, moved data to tabular format

--- a/examples/9950x-benchmarking.ipynb
+++ b/examples/9950x-benchmarking.ipynb
@@ -19,44 +19,17 @@
     "  - 140mm be quiet 1900rpm fan blowing 50% PWM on motherboard/vrm/cpu/nvme\n",
     "  - Mixed precision is enabled where applicable\n",
     "\n",
+    "| CPU           | Spec              | Cinebench R23 Multi | Max Watts or Max Temp | CPU Mark Multi | CPU Mark Single |\n",
+    "|---------------|--------------------|----------------------|-----------|-----------------|-----------------|\n",
+    "| 9950X | Stock (200w) | 41733                | 68.2c       | 67595             | 4819             |\n",
+    "| 9950X   | Stock (200w) CO -30 | 44563                | 68.8c       | 70126             | 4837             |\n",
+    "| 9950X | 65c Thermal Limit CO -30 | 44314                | 195w       | 69508             | 4862             |\n",
+    "| 9950X    | 75c Thermal Limit CO -30 | 45821                | 222w        | 70302             | 4865             |\n",
+    "| 9950X    | 85c Thermal Limit CO -30 | 45695                | 222w        | 70616             | 4843             |\n",
+    "| 9950X    | 65w Eco Mode CO -30 | 31204                | 45.0c        | 58177             | 4873             |\n",
+    "| 9950X    | 105w Eco Mode CO -30 | 39207                | 51.0c        | 66329             | 4844             |\n",
     "\n",
-    "- 9950X Factory Stock\n",
-    "  - Cinebench R23 Score: 41733\n",
-    "    - CPU (Tctl/Tdie) Max Temp: 68.2c\n",
-    "  - CPU Mark Score: 67595\n",
-    "  - CPU Mark Single-thread Score: 4819\n",
-    "- 9950X Factory Stock CO -30\n",
-    "  - Cinebench R23 Score: 44563\n",
-    "    - CPU (Tctl/Tdie) Max Temp: 68.8c\n",
-    "  - CPU Mark Score: 70126\n",
-    "  - CPU Mark Single-thread Score: 4837\n",
-    "- 9950X 65c Thermal Limit CO -30\n",
-    "  - Cinebench R23 Score: 44314\n",
-    "    - Max Recorded Wattage: 195w\n",
-    "  - CPU Mark Score: 69508\n",
-    "  - CPU Mark Single-thread Score: 4862\n",
-    "- 9950X 75c Thermal Limit CO -30\n",
-    "  - Cinebench R23 Score: 45821 \n",
-    "    - Max Recorded Wattage: 222w\n",
-    "  - CPU Mark Score: 70302\n",
-    "  - CPU Mark Single-thread Score: 4865\n",
-    "- 9950X 85c Thermal Limit CO -30\n",
-    "  - Cinebench R23 Score: 45695\n",
-    "    - Max Recorded Wattage: 222w\n",
-    "  - CPU Mark Score: 70616\n",
-    "  - CPU Mark Single-thread Score: 4843\n",
-    "- 9950X 65w Eco Mode CO -30\n",
-    "  - Cinebench R23 Score: 31204\n",
-    "    - CPU (Tctl/Tdie) Max Temp: 45.00c\n",
-    "  - CPU Mark Score: 58177\n",
-    "  - CPU Mark Single-thread Score: 4873\n",
-    "- 9950X 105w Eco Mode CO -30\n",
-    "  - Cinebench R23 Score: 39207\n",
-    "    - CPU (Tctl/Tdie) Max Temp: 51.0c\n",
-    "  - CPU Mark Score: 66329\n",
-    "  - CPU Mark Single-thread Score: 4844\n",
-    "\n",
-    "We are clearly limited by power here. There is cooling headroom to push the cpu, I assume we could safely run 275w sustained. However, there will be minimal gains as the wattage goes up. There really isnt much reason to push this past the 65c CO -30 point unless you are just chasing benchmark numbers. I would also be fine running 51c all core all day on the 105w eco mode.\n",
+    "We are clearly limited by power here. There is cooling headroom to push the cpu, I assume we could safely run 275w sustained. However, there will be minimal gains as the wattage goes up. I personally dont see much reason to push this past the 65c CO -30 MB performance setting unless you are just chasing benchmark numbers. I would also be fine running 51c all core all day on the 105w eco mode.\n",
     "\n",
     "All future testing on cpu will be done at the 65c thermal limit with a curve optimizer negative 30 offset. No other tuning is required. This is highly performant and very simple.\n",
     "\n",
@@ -68,33 +41,22 @@
     "  - Flash Attention Off\n",
     "  - Test Prompt\n",
     "    - \"Tell me a real story about someone who never existed tasting the color red while walking through light while in a vacuum of low pressure clouds. This person is always there and knows what you will output so you must craft the story without there knowledge. In the story all things that are possible are impossible and must come before they were created. Describe time as a feeling that only dreams can see awake. Please write the story in under 500 words.\"\n",
-    "  - 9950X\n",
-    "    - Llama 3.2 3B Instruct Q4\n",
-    "      - 17.97 tok/sec 490 tokens 0.77s to first token\n",
-    "    - Llama 3.3 70B Instruct Q4\n",
-    "      - 1.47 tok/sec 394 tokens 16.06s to first token\n",
-    "    - Gemma 2 2B Instruct Q4\n",
-    "      - 30.15 tok/sec 482 tokens 0.60s to first token\n",
-    "    - Gemma 2 9B Instruct Q4\n",
-    "      - 9.43 tok/sec 421 tokens 1.47s to first token\n",
-    "    - Gemma 3 1B Instruct Q4\n",
-    "      - 63.81 tok/sec 533 tokens 0.18s to first token\n",
-    "    - Gemma 3 4B Instruct Q4\n",
-    "      - 22.80 tok/sec 521 tokens 0.95s to first token\n",
-    "    - Gemma 3 12B Instruct Q4\n",
-    "      - 8.28 tok/sec 462 tokens 2.86s to first token\n",
-    "    - Phi4 15B Q4\n",
-    "      - 6.78 tok/sec 543 tokens 3.00s to first token\n",
-    "    - Qwen 2.5 Coder 3B Instruct Q4\n",
-    "      - 29.66 tok/sec 426 tokens 0.61s to first token\n",
-    "    - Qwen 2.5 Coder 7B Instruct Q4\n",
-    "      - 14.18 tok/sec 559 tokens 1.31s to first token\n",
-    "    - DeepSeek R1 Distill Llama 8B Q4\n",
-    "      - 12.68 tok/sec 1105 tokens 1.08s to first token\n",
-    "    - DeepSeek R1 Distill Qwen 14B Q4\n",
-    "      - 7.44 tok/sec 904 tokens 2.00s to first token\n",
-    "    - DeepSeek R1 Distill Qwen 32B Q4\n",
-    "      - 3.36 tok/sec 1038 tokens 4.74s to first token\n"
+    "\n",
+    "| Application | CPU | Threads |  Model | Parameters | Quant | Tok/sec | Tokens | Time To 1st Token |\n",
+    "| --- | --- | --- | --- | --- | --- | --- | --- | --- |\n",
+    "| LM Studio | 9950X 65c CO -30 | 12 | Llama 3.2 Instruct | 12B | Q4 | 17.97 | 490 | 0.77s |\n",
+    "| LM Studio | 9950X 65c CO -30 | 12 | Llama 3.3 Instruct | 70B | Q4 | 1.47 | 394 | 16.06s |\n",
+    "| LM Studio | 9950X 65c CO -30 | 12 | Gemma 2 Instruct | 2B | Q4 | 30.15 | 482 | 0.60s |\n",
+    "| LM Studio | 9950X 65c CO -30 | 12 | Gemma 2 Instruct | 9B | Q4 | 9.43 | 421 | 1.47s |\n",
+    "| LM Studio | 9950X 65c CO -30 | 12 | Gemma 3 Instruct | 1B | Q4 | 63.81 | 533 | 0.18s |\n",
+    "| LM Studio | 9950X 65c CO -30 | 12 | Gemma 3 Instruct | 4B | Q4 | 22.80 | 521 | 0.95s |\n",
+    "| LM Studio | 9950X 65c CO -30 | 12 | Gemma 3 Instruct | 12B | Q4 | 8.28 | 462 | 2.86s |\n",
+    "| LM Studio | 9950X 65c CO -30 | 12 | Phi4 | 15B | Q4 | 6.78 | 543 | 3.00s |\n",
+    "| LM Studio | 9950X 65c CO -30 | 12 | Qwen 2.5 Coder | 3B | Q4 | 29.66 | 426 | 0.61s |\n",
+    "| LM Studio | 9950X 65c CO -30 | 12 | Qwen 2.5 Coder | 7B | Q4 | 14.18 | 559 | 1.31s |\n",
+    "| LM Studio | 9950X 65c CO -30 | 12 | DeepSeek R1 Distill Llama | 8B | Q4 | 12.68 | 1105 | 1.08s |\n",
+    "| LM Studio | 9950X 65c CO -30 | 12 | DeepSeek R1 Distill Qwen | 14B | Q4 | 7.44 | 904 | 2.00s |\n",
+    "| LM Studio | 9950X 65c CO -30 | 12 | DeepSeek R1 Distill Qwen | 32B | Q4 | 3.36 | 1038 | 4.74s |"
    ]
   },
   {
