--- a/examples/9950x-benchmarking.ipynb
+++ b/examples/9950x-benchmarking.ipynb
@@ -14,7 +14,8 @@
     "### Specs\n",
     "\n",
     "- Specs\n",
-    "  - Ryzen 9 9950X\n",
+    "  - ~~Ryzen 9 9950X~~\n",
+    "    - Picked up a 9950X3D, retesting with this new processor\n",
     "  - ASRock B850i ITX\n",
     "  - Corsair DDR5 6000Mhz CL30 EXPO 96GB (48GB x 2)\n",
     "  - be quiet! Silent Loop 3 240mm AIO - Thermal Grizzly Kryosheet\n",
@@ -26,14 +27,21 @@
     "| CPU | Spec | Cinebench R23 Multi | Max Watts or Max Temp | CPU Mark Multi | CPU Mark Single |\n",
     "| --- | --- | --- | --- | --- | --- |\n",
     "| 9950X | Stock (200w) | 41733 | 68.2c | 67595 | 4819 |\n",
+    "| 9950X3D | Stock (200w) | 43448 | 69.5c | 72629 | 4832 |\n",
     "| 9950X | Stock (200w) CO -30 | 44563 | 68.8c | 70126 | 4837 |\n",
+    "| 9950X3D | Stock (200w) CO -30 | 45832 | 68.6c | 74498 | 4868 |\n",
     "| 9950X | 65c Thermal Limit CO -30 | 44314 | 195w | 69508 | 4862 |\n",
+    "| 9950X3D | 65c Thermal Limit CO -30 | 45438 | 195w | 74032 | 4846 |\n",
     "| 9950X | 75c Thermal Limit CO -30 | 45821 | 222w | 70302 | 4865 |\n",
-    "| 9950X | 85c Thermal Limit CO -30 | 45695  | 222w | 70616 | 4843 |\n",
+    "| 9950X3D | 75c Thermal Limit CO -30 | 46152 | 209w | 74321 | 4861 |\n",
+    "| 9950X | 85c Thermal Limit CO -30 | 45695 | 222w | 70616 | 4843 |\n",
+    "| 9950X3D | 85c Thermal Limit CO -30 | 45306 | 214w | 74459 | 4859 |\n",
     "| 9950X | 65w Eco Mode CO -30 | 31204 | 45.0c | 58177 | 4873 |\n",
+    "| 9950X3D | 65w Eco Mode CO -30 | 31815 | 47.9c | 61772 | 4857 |\n",
     "| 9950X | 105w Eco Mode CO -30 | 39207 | 51.0c | 66329 | 4844 |\n",
+    "| 9950X3d | 105w Eco Mode CO -30 | 40215 | 51.4c | 71607 | 4863 |\n",
     "\n",
-    "We are clearly limited by power here. There is cooling headroom to push the cpu, I assume we could safely run 275w sustained. However, there will be minimal gains as the wattage goes up. I personally dont see much reason to push this past the 65c CO -30 MB performance setting unless you are just chasing benchmark numbers. I would also be fine running 51c all core all day on the 105w eco mode.\n",
+    "We are clearly limited by power here. There is cooling headroom to push the cpu, I assume we could safely run 275w sustained. However, there will be minimal gains as the wattage goes up. I personally dont see much reason to push this past the 65c CO -30 performance setting unless you are just chasing benchmark numbers. I would also be fine running 51c all core all day on the 105w eco mode.\n",
     "\n",
     "All future testing on cpu will be done at the 65c thermal limit with a curve optimizer negative 30 offset. No other tuning is required. This is highly performant and very simple.\n",
     "\n",
@@ -50,26 +58,41 @@
     "\n",
     "| Application | CPU | Threads |  Model | Parameters | Quant | Tok/sec | Tokens | Time To 1st Token |\n",
     "| --- | --- | --- | --- | --- | --- | --- | --- | --- |\n",
-    "| LM Studio | 9950X 65c CO -30 | 12 | Llama 3.2 Instruct | 12B | Q4 | 17.97 | 490 | 0.77s |\n",
+    "| LM Studio | 9950X 65c CO -30 | 12 | Llama 3.2 Instruct | 3B | Q4 | 17.97 | 490 | 0.77s |\n",
+    "| LM Studio | 9950X3D 65c CO -30 | 12 | Llama 3.2 Instruct | 3B | Q4 | 18.26 | 501 | 0.44s |\n",
     "| LM Studio | 9950X 65c CO -30 | 12 | Llama 3.3 Instruct | 70B | Q4 | 1.47 | 394 | 16.06s |\n",
+    "| LM Studio | 9950X3D 65c CO -30 | 12 | Llama 3.3 Instruct | 70B | Q4 | 1.41 | 428 | 13.65s |\n",
     "| LM Studio | 9950X 65c CO -30 | 12 | Gemma 2 Instruct | 2B | Q4 | 30.15 | 482 | 0.60s |\n",
+    "| LM Studio | 9950X3D 65c CO -30 | 12 | Gemma 2 Instruct | 2B | Q4 | 33.12 | 467 | 0.37s |\n",
     "| LM Studio | 9950X 65c CO -30 | 12 | Gemma 2 Instruct | 9B | Q4 | 9.43 | 421 | 1.47s |\n",
+    "| LM Studio | 9950X3D 65c CO -30 | 12 | Gemma 2 Instruct | 9B | Q4 | 10.51 | 427 | 1.42s |\n",
     "| LM Studio | 9950X 65c CO -30 | 12 | Gemma 3 Instruct | 1B | Q4 | 63.81 | 533 | 0.18s |\n",
+    "| LM Studio | 9950X3D 65c CO -30 | 12 | Gemma 3 Instruct | 1B | Q4 | 67.63 | 514 | 0.17s |\n",
     "| LM Studio | 9950X 65c CO -30 | 12 | Gemma 3 Instruct | 4B | Q4 | 22.80 | 521 | 0.95s |\n",
+    "| LM Studio | 9950X3D 65c CO -30 | 12 | Gemma 3 Instruct | 4B | Q4 | 23.38 | 494 | 0.57s |\n",
     "| LM Studio | 9950X 65c CO -30 | 12 | Gemma 3 Instruct | 12B | Q4 | 8.28 | 462 | 2.86s |\n",
+    "| LM Studio | 9950X3D 65c CO -30 | 12 | Gemma 3 Instruct | 12B | Q4 | 7.80 | 494 | 1.83s |\n",
     "| LM Studio | 9950X 65c CO -30 | 12 | Phi4 | 15B | Q4 | 6.78 | 543 | 3.00s |\n",
+    "| LM Studio | 9950X3D 65c CO -30 | 12 | Phi4 | 15B | Q4 | 8.45 | 484 | 1.81s |\n",
     "| LM Studio | 9950X 65c CO -30 | 12 | Qwen 2.5 Coder | 3B | Q4 | 29.66 | 426 | 0.61s |\n",
+    "| LM Studio | 9950X3D 65c CO -30 | 12 | Qwen 2.5 Coder | 3B | Q4 | 30.94 | 397 | 0.60s |\n",
     "| LM Studio | 9950X 65c CO -30 | 12 | Qwen 2.5 Coder | 7B | Q4 | 14.18 | 559 | 1.31s |\n",
+    "| LM Studio | 9950X3D 65c CO -30 | 12 | Qwen 2.5 Coder | 7B | Q4 | 14.38 | 514 | 0.09s |\n",
     "| LM Studio | 9950X 65c CO -30 | 12 | DeepSeek R1 Distill Llama | 8B | Q4 | 12.68 | 1105 | 1.08s |\n",
+    "| LM Studio | 9950X3D 65c CO -30 | 12 | DeepSeek R1 Distill Llama | 8B | Q4 | 13.56 | 795 | 1.06s |\n",
     "| LM Studio | 9950X 65c CO -30 | 12 | DeepSeek R1 Distill Qwen | 14B | Q4 | 7.44 | 904 | 2.00s |\n",
+    "| LM Studio | 9950X3D 65c CO -30 | 12 | DeepSeek R1 Distill Qwen | 14B | Q4 | 7.77 | 979 | 1.97s |\n",
     "| LM Studio | 9950X 65c CO -30 | 12 | DeepSeek R1 Distill Qwen | 32B | Q4 | 3.36 | 1038 | 4.74s |\n",
+    "| LM Studio | 9950X3D 65c CO -30 | 12 | DeepSeek R1 Distill Qwen | 32B | Q4 | 3.19 | 675 | 4.62s |\n",
     "\n",
     "### Stable Diffusion Performance\n",
     "\n",
     "| SD Version | CPU | dType | Mixed Precision Y/N | Images | Steps | Size | Total Time | Per Img Time | Per Iteration |\n",
     "| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |\n",
     "| 1.5 | 9950X 65c CO -30 | FP32 | No | 4 | 30 | 512x512 | 182.43s | 45.61s | 1.46s per it |\n",
-    "| 1.5 | 9950X 65c CO -30 | FP16 | Yes | 4 | 30 | 512x512 | 107.42s | 26.85s | 1.17it per sec |"
+    "| 1.5 | 9950X 65c CO -30 | FP16 | Yes | 4 | 30 | 512x512 | 107.42s | 26.85s | 1.17it per sec |\n",
+    "| 1.5 | 9950X3D 65c CO -30 | FP32 | No | 4 | 30 | 512x512 | 124.09s | 45.61s | 1.02it per sec |\n",
+    "| 1.5 | 9950X3D 65c CO -30 | FP16 | Yes | 4 | 30 | 512x512 | 74.39s | 26.85s | 1.68it per sec |"
    ]
   },
   {
@@ -144,6 +167,71 @@
     "end_time = time.perf_counter()\n",
     "elapsed_time = end_time - start_time\n",
     "print(f\"{elapsed_time:.2f} Seconds Mixed Precision FP16\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "from IPython.display import display\n",
+    "from diffusers import StableDiffusionPipeline, StableDiffusionImg2ImgPipeline\n",
+    "from torch.amp import autocast\n",
+    "import logging\n",
+    "import time\n",
+    "import tqdm\n",
+    "\n",
+    "hp = {\n",
+    "    \"batch_size\": 32,\n",
+    "    \"epochs\": 25,\n",
+    "    \"random_seed\": 42,\n",
+    "    \"randomize_seed\": True,\n",
+    "    \"cpu_only\": True,\n",
+    "    \"device\": \"cpu\",\n",
+    "}\n",
+    "\n",
+    "# Device configuration\n",
+    "def get_device():\n",
+    "    \"\"\"\n",
+    "    This will check for an Intel XPU or CUDA device and return it if available, otherwise it will return CPU.\n",
+    "\n",
+    "    Returns the torch device to use.\n",
+    "    \"\"\"\n",
+    "    if hp['cpu_only'] == False:\n",
+    "        #device = \"xpu\" if torch.xpu.is_available() else \"cpu\"\n",
+    "        if torch.xpu.is_available():\n",
+    "            device = \"xpu\"\n",
+    "        elif torch.cuda.is_available():\n",
+    "            device = \"cuda\"\n",
+    "        else:\n",
+    "            device = \"cpu\"\n",
+    "\n",
+    "        logging.info(f\"Using device: {device}\")\n",
+    "        return device\n",
+    "    else:\n",
+    "        logging.info(\"Using CPU only\")\n",
+    "        return \"cpu\"\n",
+    "\n",
+    "# Logging configuration\n",
+    "logging.basicConfig(level=logging.DEBUG, format='%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
+    "\n",
+    "# Randomize seed if set to True\n",
+    "if hp['randomize_seed']:\n",
+    "    hp['random_seed'] = random.randint(0, 1000000000)\n",
+    "logging.info(f\"Seed set to: {hp['random_seed']}\") \n",
+    "\n",
+    "# Main function\n",
+    "def main():\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "# Run the main function\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
    ]
   },
   {
@@ -231,7 +319,7 @@
     "# Device configuration\n",
     "def get_device():\n",
     "    \"\"\"\n",
-    "    This will check for an Intel XPU device and return it if available, otherwise it will return cpu.\n",
+    "    This will check for an Intel XPU or CUDA device and return it if available, otherwise it will return CPU.\n",
     "\n",
     "    Returns the torch device to use.\n",
     "    \"\"\"\n",
