--- a/examples/9950x-benchmarking.ipynb
+++ b/examples/9950x-benchmarking.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 9950X Benchmarking"
+    "# ~~9950X~~ 9950X3D Benchmarking"
    ]
   },
   {
@@ -90,9 +90,9 @@
     "| SD Version | CPU | dType | Mixed Precision Y/N | Images | Steps | Size | Total Time | Per Img Time | Per Iteration |\n",
     "| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |\n",
     "| 1.5 | 9950X 65c CO -30 | FP32 | No | 4 | 30 | 512x512 | 182.43s | 45.61s | 1.46s per it |\n",
+    "| 1.5 | 9950X3D 65c CO -30 | FP32 | No | 4 | 30 | 512x512 | 124.09s | 31.02s | 1.02it per sec |\n",
     "| 1.5 | 9950X 65c CO -30 | FP16 | Yes | 4 | 30 | 512x512 | 107.42s | 26.85s | 1.17it per sec |\n",
-    "| 1.5 | 9950X3D 65c CO -30 | FP32 | No | 4 | 30 | 512x512 | 124.09s | 45.61s | 1.02it per sec |\n",
-    "| 1.5 | 9950X3D 65c CO -30 | FP16 | Yes | 4 | 30 | 512x512 | 74.39s | 26.85s | 1.68it per sec |"
+    "| 1.5 | 9950X3D 65c CO -30 | FP16 | Yes | 4 | 30 | 512x512 | 74.39s | 18.59s | 1.68it per sec |"
    ]
   },
   {
