updating sd1.5 code

--- a/examples/9950x-benchmarking.ipynb
+++ b/examples/9950x-benchmarking.ipynb
@@ -185,13 +185,28 @@
     "import tqdm\n",
     "\n",
     "hp = {\n",
-    "    \"batch_size\": 32,\n",
-    "    \"epochs\": 25,\n",
     "    \"random_seed\": 42,\n",
     "    \"randomize_seed\": True,\n",
     "    \"cpu_only\": True,\n",
     "    \"device\": \"cpu\",\n",
-    "}\n",
+    "    \"model\": \"runwayml/stable-diffusion-v1-5\",\n",
+    "    \"prompt\": \"Large obsidian monolith in a foggy lush green forest, rolling fog on the ground\",\n",
+    "    \"negative_prompt\": \"cartoon, fake, unrealistic\",\n",
+    "    \"steps\": 30,\n",
+    "    \"epochs\": 4,\n",
+    "    \"guidance\": 7.5,\n",
+    "    \"strength\": 0.7,\n",
+    "    \"height\": 512,\n",
+    "    \"width\": 512,\n",
+    "    }\n",
+    "\n",
+    "# Logging configuration\n",
+    "logging.basicConfig(level=logging.DEBUG, format='%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
+    "\n",
+    "# Randomize seed if set to True\n",
+    "if hp['randomize_seed']:\n",
+    "    hp['random_seed'] = random.randint(0, 1000000000)\n",
+    "logging.info(f\"Seed set to: {hp['random_seed']}\") \n",
     "\n",
     "# Device configuration\n",
     "def get_device():\n",
@@ -215,18 +230,54 @@
     "        logging.info(\"Using CPU only\")\n",
     "        return \"cpu\"\n",
     "\n",
-    "# Logging configuration\n",
-    "logging.basicConfig(level=logging.DEBUG, format='%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
+    "def image(epochs, prompt, strength, num_inference_steps,guidance_scale, height, width):\n",
+    "    start_time = time.perf_counter()\n",
+    "    for epoch in tqdm.tqdm(range(epochs)):\n",
+    "        initial_image = stable_diffusion_txt2img(prompt=prompt,\n",
+    "                                                strength=strength,\n",
+    "                                                num_inference_steps=num_inference_steps,\n",
+    "                                                guidance_scale=guidance_scale,\n",
+    "                                                height=height, width=width)[0]\n",
+    "        #display(initial_image[0])\n",
+    "    end_time = time.perf_counter()\n",
+    "    elapsed_time = end_time - start_time\n",
+    "    return elapsed_time\n",
     "\n",
-    "# Randomize seed if set to True\n",
-    "if hp['randomize_seed']:\n",
-    "    hp['random_seed'] = random.randint(0, 1000000000)\n",
-    "logging.info(f\"Seed set to: {hp['random_seed']}\") \n",
+    "# Image Generation\n",
+    "def generate_img(epochs, prompt, strength, num_inference_steps,guidance_scale, height, width, datatype=\"fp32\"):\n",
+    "\n",
+    "    if datatype == \"fp32\": \n",
+    "        elapsed_time = image(epochs, prompt, strength, num_inference_steps,guidance_scale, height, width)\n",
+    "        print(f\"{elapsed_time:.2f} Seconds {datatype}\")\n",
+    "    if datatype == \"fp16\":\n",
+    "        with torch.amp.autocast(\"cpu\"):\n",
+    "            elapsed_time = image(epochs, prompt, strength, num_inference_steps,guidance_scale, height, width)\n",
+    "            print(f\"{elapsed_time:.2f} Seconds {datatype}\")\n",
     "\n",
     "# Main function\n",
     "def main():\n",
     "    \n",
+    "    stable_diffusion_txt2img = StableDiffusionPipeline.from_pretrained(\n",
+    "        model_id, use_safetensors=True,\n",
+    "        safety_checker=None,\n",
+    "        feature_extractor=None,\n",
+    "        requires_safety_checker=False\n",
+    "        ).to(\"cpu\")\n",
     "\n",
+    "    components = stable_diffusion_txt2img.components\n",
+    "\n",
+    "    stable_diffusion_img2img = StableDiffusionImg2ImgPipeline(**components)\n",
+    "\n",
+    "    stable_diffusion_txt2img_custom = StableDiffusionPipeline(\n",
+    "        vae=stable_diffusion_txt2img.vae,\n",
+    "        text_encoder=stable_diffusion_txt2img.text_encoder,\n",
+    "        tokenizer=stable_diffusion_txt2img.tokenizer,\n",
+    "        unet=stable_diffusion_txt2img.unet,\n",
+    "        scheduler=stable_diffusion_txt2img.scheduler,\n",
+    "        safety_checker=None,\n",
+    "        feature_extractor=None,\n",
+    "        requires_safety_checker=False,\n",
+    "        ).to(device)\n",
     "\n",
     "\n",
     "# Run the main function\n",
