--- a/examples/9950x-benchmarking.ipynb
+++ b/examples/9950x-benchmarking.ipynb
@@ -40,6 +40,10 @@
     "| 9950X3D | 65w Eco Mode CO -30 | 31815 | 47.9c | 61772 | 4857 |\n",
     "| 9950X | 105w Eco Mode CO -30 | 39207 | 51.0c | 66329 | 4844 |\n",
     "| 9950X3d | 105w Eco Mode CO -30 | 40215 | 51.4c | 71607 | 4863 |\n",
+    "| 9950X3d | 105w Eco Mode CO -25 | 39992 | 52.0c | 71494 | 4872 |\n",
+    "| 9950X3d | 58c Thermal Limit CO -25 | 43479 | 166w | 72056 | 4855 |\n",
+    "| 9950X3d | 85c Thermal Limit CO -30 Inf-Fab 2.1ghz | 46114 | 208w (71.5c max) | 74521 | 4860 |\n",
+    "| 9950X3d | 85c Thermal Limit CO -30 Inf-Fab 2.2ghz DDR5 6200mhz | 46370 | 209w (70.2c max) | Crash | Crash |\n",
     "\n",
     "We are clearly limited by power here. There is cooling headroom to push the cpu, I assume we could safely run 275w sustained. However, there will be minimal gains as the wattage goes up. I personally dont see much reason to push this past the 65c CO -30 performance setting unless you are just chasing benchmark numbers. I would also be fine running 51c all core all day on the 105w eco mode.\n",
     "\n",
@@ -60,6 +64,7 @@
     "| --- | --- | --- | --- | --- | --- | --- | --- | --- |\n",
     "| LM Studio | 9950X 65c CO -30 | 12 | Llama 3.2 Instruct | 3B | Q4 | 17.97 | 490 | 0.77s |\n",
     "| LM Studio | 9950X3D 65c CO -30 | 12 | Llama 3.2 Instruct | 3B | Q4 | 18.26 | 501 | 0.44s |\n",
+    "| LM Studio | 9950X3D 58c CO -25 | 12 | Llama 3.2 Instruct | 3B | Q4 | 18.04 | 465 | 0.78s |\n",
     "| LM Studio | 9950X 65c CO -30 | 12 | Llama 3.3 Instruct | 70B | Q4 | 1.47 | 394 | 16.06s |\n",
     "| LM Studio | 9950X3D 65c CO -30 | 12 | Llama 3.3 Instruct | 70B | Q4 | 1.41 | 428 | 13.65s |\n",
     "| LM Studio | 9950X 65c CO -30 | 12 | Gemma 2 Instruct | 2B | Q4 | 30.15 | 482 | 0.60s |\n",
@@ -68,8 +73,10 @@
     "| LM Studio | 9950X3D 65c CO -30 | 12 | Gemma 2 Instruct | 9B | Q4 | 10.51 | 427 | 1.42s |\n",
     "| LM Studio | 9950X 65c CO -30 | 12 | Gemma 3 Instruct | 1B | Q4 | 63.81 | 533 | 0.18s |\n",
     "| LM Studio | 9950X3D 65c CO -30 | 12 | Gemma 3 Instruct | 1B | Q4 | 67.63 | 514 | 0.17s |\n",
+    "| LM Studio | 9950X3D 58c CO -25 | 12 | Gemma 3 Instruct | 1B | Q4 | 66.81 | 544 | 0.18s |\n",
     "| LM Studio | 9950X 65c CO -30 | 12 | Gemma 3 Instruct | 4B | Q4 | 22.80 | 521 | 0.95s |\n",
     "| LM Studio | 9950X3D 65c CO -30 | 12 | Gemma 3 Instruct | 4B | Q4 | 23.38 | 494 | 0.57s |\n",
+    "| LM Studio | 9950X3D 58c CO -25 | 12 | Gemma 3 Instruct | 4B | Q4 | 22.86 | 493 | 0.93s |\n",
     "| LM Studio | 9950X 65c CO -30 | 12 | Gemma 3 Instruct | 12B | Q4 | 8.28 | 462 | 2.86s |\n",
     "| LM Studio | 9950X3D 65c CO -30 | 12 | Gemma 3 Instruct | 12B | Q4 | 7.80 | 494 | 1.83s |\n",
     "| LM Studio | 9950X 65c CO -30 | 12 | Phi4 | 15B | Q4 | 6.78 | 543 | 3.00s |\n",
@@ -91,8 +98,12 @@
     "| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |\n",
     "| 1.5 | 9950X 65c CO -30 | FP32 | No | 4 | 30 | 512x512 | 182.43s | 45.61s | 1.46s per it |\n",
     "| 1.5 | 9950X3D 65c CO -30 | FP32 | No | 4 | 30 | 512x512 | 124.09s | 31.02s | 1.02it per sec |\n",
+    "| 1.5 | 9950X3D 65w Eco Mode CO -30 | FP32 | No | 4 | 30 | 512x512 | 159.52s | 39.88s | 1.27s per it |\n",
+    "| 1.5 | 9950X3D 58c CO -25 | FP32 | No | 4 | 30 | 512x512 | 140.06s | 35.01s | 1.12s per it |\n",
     "| 1.5 | 9950X 65c CO -30 | FP16 | Yes | 4 | 30 | 512x512 | 107.42s | 26.85s | 1.17it per sec |\n",
-    "| 1.5 | 9950X3D 65c CO -30 | FP16 | Yes | 4 | 30 | 512x512 | 74.39s | 18.59s | 1.68it per sec |"
+    "| 1.5 | 9950X3D 65c CO -30 | FP16 | Yes | 4 | 30 | 512x512 | 74.39s | 18.59s | 1.68it per sec |\n",
+    "| 1.5 | 9950X3D 65w Eco Mode CO -30 | FP16 | Yes | 4 | 30 | 512x512 | 113.79s | 28.44s | 1.09it per sec |\n",
+    "| 1.5 | 9950X3D 58c CO -25 | FP16 | Yes | 4 | 30 | 512x512 | 78.07s | 19.51s | 1.59it per sec |"
    ]
   },
   {
