--- a/examples/9950x-benchmarking.ipynb
+++ b/examples/9950x-benchmarking.ipynb
@@ -107,6 +107,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stable Diffusion 1.5"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -144,7 +151,7 @@
     ").to(device)\n",
     "\n",
     "\n",
-    "prompt = \"I large obsidian monolith in a foggy lush green forest\"\n",
+    "prompt = \"Large obsidian monolith in a foggy lush green forest\"\n",
     "negative_prompt = \"cartoon, fake, unrealistic\"\n",
     "num_inference_steps = 30\n",
     "epochs = 4\n",
@@ -178,6 +185,13 @@
     "end_time = time.perf_counter()\n",
     "elapsed_time = end_time - start_time\n",
     "print(f\"{elapsed_time:.2f} Seconds Mixed Precision FP16\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Updating SD 1.5 Code - Unfinished"
    ]
   },
   {
