--- a/benchmarks/rx9070xt-benchmarking.ipynb
+++ b/benchmarks/rx9070xt-benchmarking.ipynb
@@ -60,16 +60,12 @@
     "| LM Studio | RX 9070 XT Taichi | 100% | Phi 4 | 15B | Q4 | 10.79 | 565 | 0.83s |\n",
     "| LM Studio | RX 9070 XT Taichi | 100% | DeepSeek R1 Distill Llama | 8B | Q4 | 89.68 | 950 | 0.18s |\n",
     "| LM Studio | RX 9070 XT Taichi | 100% | DeepSeek R1 Distill Qwen | 14B | Q4 | 10.59 | 801 | 0.40s |\n",
+    "| LM Studio | RX 9070 XT Taichi | 100% | DeepSeek R1 Distill Qwen | 7B | Q4 | 93.26 | 1190 | 0.17s |\n",
     "| LM Studio | RX 9070 XT Taichi | 100% | Qwen 2.5 Coder Instruct | 3B | Q4 | 172.59 | 477 | 0.11s |\n",
     "| LM Studio | RX 9070 XT Taichi | 100% | Qwen 2.5 Coder Instruct | 14B | Q4 | 10.62 | 494 | 0.40s |\n",
     "| LM Studio | RX 9070 XT Taichi | 100% | Qwen 2.5 Instruct 1M | 7B | Q4 | 94.39 | 590 | 0.17s |\n",
     "| LM Studio | RX 9070 XT Taichi | 100% | Granite 3.2 Instruct | 8B | Q4 | 82.92 | 723 | 0.28s |\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
