--- a/benchmarks/rx9070xt-benchmarking.ipynb
+++ b/benchmarks/rx9070xt-benchmarking.ipynb
@@ -60,13 +60,12 @@
     "    - 75% = 254w\n",
     "    - 70% = 237w\n",
     "\n",
-    "\n",
     "| Application | GPU | Power | Offload |  Model | Parameters | Quant | Tok/sec | Tokens | Time To 1st Token |\n",
     "| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |\n",
     "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Gemma 3 Instruct | 1B | Q4 | 239.89 | 513 | 0.15s |\n",
     "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Gemma 3 Instruct | 4B | Q4 | 135.52 | 490 | 0.12s |\n",
     "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Gemma 3 Instruct | 12B | Q4 | 47.51 | 453 | 0.29s |\n",
-    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | 100% | Llama 3.2 Instruct | 1B | Q4 | 360.55 | 514 | 0.00s |\n",
+    "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Llama 3.2 Instruct | 1B | Q4 | 360.55 | 514 | 0.00s |\n",
     "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Llama 3.2 Instruct | 3B | Q4 | 172.25 | 495 | 0.10s |\n",
     "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Phi 4 | 15B | Q4 | 10.79 | 565 | 0.83s |\n",
     "| LM Studio | RX 9070 XT Taichi | 100% | 100% | DeepSeek R1 Distill Llama | 8B | Q4 | 89.68 | 950 | 0.18s |\n",
@@ -76,7 +75,6 @@
     "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Qwen 2.5 Coder Instruct | 14B | Q4 | 10.62 | 494 | 0.40s |\n",
     "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Qwen 2.5 Instruct 1M | 7B | Q4 | 94.39 | 590 | 0.17s |\n",
     "| LM Studio | RX 9070 XT Taichi | 100% | 100% | Granite 3.2 Instruct | 8B | Q4 | 82.92 | 723 | 0.28s |\n",
-    "\n",
     "\n",
     "#### Power Level Testing Against Gemma 3 Instruct 4B\n",
     "\n",
