--- a/benchmarks/rx9070xt-benchmarking.ipynb
+++ b/benchmarks/rx9070xt-benchmarking.ipynb
@@ -100,8 +100,44 @@
     "| LM Studio | RX 9070 XT Taichi | 100% -0mv | 100% | Gemma 3 Instruct | 4B | Q4 | 133.63 | 536 | 0.13s |\n",
     "| LM Studio | RX 9070 XT Taichi | 100% -50mv | 100% | Gemma 3 Instruct | 4B | Q4 | 135.75 | 525 | 0.01s |\n",
     "| LM Studio | RX 9070 XT Taichi | 100% -100mv | 100% | Gemma 3 Instruct | 4B | Q4 | 134.83 | 515 | 0.01s |\n",
-    "| LM Studio | RX 9070 XT Taichi | 100% -100mv 110% Power +200mhz Clock | 100% | Gemma 3 Instruct | 4B | Q4 | 134.49 | 482 | 0.01s |\n"
+    "| LM Studio | RX 9070 XT Taichi | 100% -100mv 110% Power +200mhz Clock | 100% | Gemma 3 Instruct | 4B | Q4 | 134.49 | 482 | 0.01s |\n",
+    "\n",
+    "#### 3D Mark Testing\n",
+    "\n",
+    "- Fan Curve\n",
+    "  - Zero RPM Fan Disabled (Fans will always run minimum 27% pwm)\n",
+    "  - P1 27% pwm 46c\n",
+    "  - P2 38% pwm 51c\n",
+    "  - P3 53% pwm 56c\n",
+    "  - P4 66% pwm 61c\n",
+    "  - P5 100% pwm 66c\n",
+    "\n",
+    "  The results are interesting. I had trouble crossing into the 70 fps zone in this benchmark however I did not get a single crash which was great. That doesnt mean playing a game or some other workload any of these would be stable. Benchmarks != Gaming. My last test is more my speed, 75% power levels with an undervolt and slight memory overclock brings us to factory speeds while cutting around 80-90w. \n",
+    "\n",
+    "| Application | Benchmark | GPU | Power | GPU Clock Offset |  GPU Voltage Offset | VRAM Timing | VRAM Max Clock | Score | FPS |\n",
+    "| --- | --- | --- | --- |  --- | --- | --- | --- | --- | --- |\n",
+    "| 3DMark | Speedway | RX 9070 XT Taichi | 110% | Factory | Factory | Factory | Factory | 6491 | 64.92 FPS |\n",
+    "| 3DMark | Speedway | RX 9070 XT Taichi | Factory | Factory | Factory | Factory | Factory | 6424 | 64.24 FPS |\n",
+    "| 3DMark | Speedway | RX 9070 XT Taichi | 90% | Factory | Factory | Factory | Factory | 6333 | 63.34 FPS |\n",
+    "| 3DMark | Speedway | RX 9070 XT Taichi | 75% | Factory | Factory | Factory | Factory | 6145 | 61.45 FPS |\n",
+    "| 3DMark | Speedway | RX 9070 XT Taichi | 110% | +200 | -50 | Factory | Factory | 6520 | 65.20 FPS |\n",
+    "| 3DMark | Speedway | RX 9070 XT Taichi | 110% | +300 | -80 | Factory | Factory | 6542 | 65.24 FPS |\n",
+    "| 3DMark | Speedway | RX 9070 XT Taichi | 110% | +300 | -80 | Fast Timing | Factory | 6600 | 66.01 FPS |\n",
+    "| 3DMark | Speedway | RX 9070 XT Taichi | 110% | +300 | -80 | Fast Timing | 2618 | 6760 | 67.60 FPS |\n",
+    "| 3DMark | Speedway | RX 9070 XT Taichi | 110% | +300 | -90 | Fast Timing | 2666 | 6849 | 68.50 FPS |\n",
+    "| 3DMark | Speedway | RX 9070 XT Taichi | 110% | +300 | -90 | Fast Timing | 2718 | 6931 | 69.31 FPS |\n",
+    "| 3DMark | Speedway | RX 9070 XT Taichi | 110% | +300 | -95 | Fast Timing | 2766 | 7011 | 70.11 FPS |\n",
+    "| 3DMark | Speedway | RX 9070 XT Taichi | 110% | +300 | -100 | Fast Timing | 2818 | 6560 | 67.15 FPS |\n",
+    "| 3DMark | Speedway | RX 9070 XT Taichi | 110% | +300 | -110 | Fast Timing | 2790 | 7003 | 70.04 FPS |\n",
+    "| 3DMark | Speedway | RX 9070 XT Taichi | 110% | +300 | -95 | Fast Timing | 2790 | 7005 | 70.06 FPS |\n",
+    "| 3DMark | Speedway | RX 9070 XT Taichi | 110% | +400 | -120 | Fast Timing | 2790 | 7021 | 70.22 FPS |\n",
+    "| 3DMark | Speedway | RX 9070 XT Taichi | 75% | Factory | -50 | Fast Timing | 2618 | 6401 | 64.01 FPS |"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
